[project]
name = "neonext_analytics"
authors = [
    { name = "Your Company", email = "dev@yourcompany.com" },
]
description = "ERPNext data visualization dashboard, native Frappe app"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # All runtime needs (frappe, erpnext) are provided by the bench.
    # Add third-party Python packages here if you extend the app.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
