[project]
name = "neonext_analytics"
authors = [
    { name = "Your Company", email = "dev@yourcompany.com" },
]
description = "ERPNext analytics dashboard — native Frappe app"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Frappe Cloud reads this block to check version compatibility before
# adding the app to a bench. Keep the ranges in sync with your site.
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
